--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -92,7 +92,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>sfml-system.lib;sfml-main.lib;sfml-window.lib;sfml-network.lib;sfml-graphics.lib;sfml-audio.lib;Winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-system.lib;sfml-main.lib;sfml-window.lib;sfml-network.lib;sfml-graphics.lib;sfml-audio.lib;Winmm.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <StackReserveSize>
       </StackReserveSize>
     </Link>
@@ -138,10 +138,12 @@
     <ClCompile Include="UI_update.cpp" />
     <ClCompile Include="UI_util.cpp" />
     <ClCompile Include="unit.cpp" />
+    <ClCompile Include="util.cpp" />
     <ClCompile Include="visual_main.cpp" />
     <ClCompile Include="window_event.cpp" />
     <ClCompile Include="window_main.cpp" />
     <ClCompile Include="window_paint_main.cpp" />
+    <ClCompile Include="window_util.cpp" />
     <ClCompile Include="world.cpp" />
   </ItemGroup>
   <ItemGroup>
