Settings.ini support
- [Added] Support for .ini files
- [Replaced] New bullet visuals
- [Fixed] Fullscreen aspect ratio

--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="server_util.cpp" />
     <ClCompile Include="server_world.cpp" />
     <ClCompile Include="settings.cpp" />
+    <ClCompile Include="settings_util.cpp" />
     <ClCompile Include="UI_button.cpp" />
     <ClCompile Include="UI_contextMenu.cpp" />
     <ClCompile Include="UI_inventory.cpp" />
