--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -27,10 +27,33 @@ hkActiveItem05 = 31
 hkActiveItem06 = 32
 hkActiveItem07 = 33
 hkActiveItem08 = 34
-hkActiveItem09 = 0
+hkActiveItem09 = 35
 hkCamMoveUp = 22
 hkCamMoveDown = 18
 hkCamMoveLeft = 0
 hkCamMoveRight = 3
 hkDebugMode = 87
 hkDebugAdvanced = 88
+
+
+bool cSettings::getNextKey(ifstream *file, cSettingsKey *key)
+{
+	char buffer[256];
+	string buf = buffer;
+
+	do
+	{
+		file->getline(buffer, 256);
+		buf = buffer;
+		
+		if (...)
+		{
+			key->name = *ключ*;
+			key->value = *значение*;
+			return true;
+		}
+	}
+	while (!file->eof());
+
+	return false;
+}
