--- a/.gitattributes
+++ b/.gitattributes
@@ -17,5 +17,5 @@
 *.RTF	 diff=astextplain
 
 # Ignore VS .xml files
-"Taiga 4 Engine/Taiga 4 Engine.vcxproj" linguist-vendored=true
-"Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters" linguist-vendored=true
+Taiga 4 Engine/Taiga 4 Engine.vcxproj linguist-vendored=true
+Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters linguist-vendored=true
