--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="saveload_util.cpp" />
     <ClCompile Include="server_main.cpp" />
     <ClCompile Include="server_message.cpp" />
+    <ClCompile Include="server_pack.cpp" />
     <ClCompile Include="server_util.cpp" />
     <ClCompile Include="server_world.cpp" />
     <ClCompile Include="settings.cpp" />
