--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -210,6 +210,9 @@
     <ClCompile Include="server_pack.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
     </ClCompile>
+    <ClCompile Include="console_util.cpp">
+      <Filter>Файлы исходного кода\Console</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
