--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="Файлы исходного кода\Saveload">
       <UniqueIdentifier>{29b816fc-766a-4c24-8d03-e0d8d54d0675}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Файлы исходного кода\Script">
+      <UniqueIdentifier>{95d9d2b8-b7eb-46bf-949c-fe590eb16695}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="console_cmd.cpp">
@@ -216,6 +219,12 @@
     <ClCompile Include="database_external.cpp">
       <Filter>Файлы исходного кода\Database</Filter>
     </ClCompile>
+    <ClCompile Include="script.cpp">
+      <Filter>Файлы исходного кода\Script</Filter>
+    </ClCompile>
+    <ClCompile Include="script_data.cpp">
+      <Filter>Файлы исходного кода\Script</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
@@ -292,6 +301,9 @@
     </ClInclude>
     <ClInclude Include="icon.h">
       <Filter>Файлы исходного кода\Visual</Filter>
+    </ClInclude>
+    <ClInclude Include="script.h">
+      <Filter>Файлы исходного кода\Script</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
