--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -1,7 +1,7 @@
 [Display]
 screenMode = 0
-screenWidth = 1024
-screenHeight = 768
+screenWidth = 1600
+screenHeight = 900
 enableVertSync = 0
 sampleMod = 100
 
@@ -18,6 +18,11 @@ shadowBlur = 1
 enableQuickCast = 0
 enableMouseScroll = 0
 enableDynamicTooltips = 0
+
+[Console]
+consoleFontSize = 14
+consoleLineSpacing = 2
+consoleScrollSpeed = 3
 
 [Keyboard]
 hkInventory = 4
@@ -36,3 +41,4 @@ hkCamMoveLeft = 0
 hkCamMoveRight = 3
 hkDebugMode = 87
 hkDebugAdvanced = 88
+hkConsole = 54
