--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -124,6 +124,8 @@
     <ClCompile Include="editor_main.cpp" />
     <ClCompile Include="editor_util.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="game_check.cpp" />
+    <ClCompile Include="game_get.cpp" />
     <ClCompile Include="item.cpp" />
     <ClCompile Include="itemActive.cpp" />
     <ClCompile Include="main.cpp" />
