--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -93,32 +93,17 @@
     <ClCompile Include="visual_main.cpp">
       <Filter>Файлы исходного кода\Visual</Filter>
     </ClCompile>
-    <ClCompile Include="database.cpp">
-      <Filter>Файлы исходного кода\Database</Filter>
-    </ClCompile>
-    <ClCompile Include="game.cpp">
-      <Filter>Файлы исходного кода\Character</Filter>
-    </ClCompile>
     <ClCompile Include="server_main.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
     </ClCompile>
-    <ClCompile Include="unit.cpp">
-      <Filter>Файлы исходного кода\Character</Filter>
-    </ClCompile>
     <ClCompile Include="math.cpp">
       <Filter>Файлы исходного кода\Util</Filter>
-    </ClCompile>
-    <ClCompile Include="animation.cpp">
-      <Filter>Файлы исходного кода\Character</Filter>
     </ClCompile>
     <ClCompile Include="UI_main.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
     </ClCompile>
     <ClCompile Include="UI_button.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="camera.cpp">
-      <Filter>Файлы исходного кода\Window</Filter>
     </ClCompile>
     <ClCompile Include="client_main.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
@@ -129,23 +114,14 @@
     <ClCompile Include="server_util.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
     </ClCompile>
-    <ClCompile Include="settings.cpp">
-      <Filter>Файлы исходного кода\Core</Filter>
-    </ClCompile>
     <ClCompile Include="UI_inventory.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
     </ClCompile>
     <ClCompile Include="UI_util.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
     </ClCompile>
-    <ClCompile Include="item.cpp">
-      <Filter>Файлы исходного кода\Character\Item</Filter>
-    </ClCompile>
     <ClCompile Include="UI_update.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
-    </ClCompile>
-    <ClCompile Include="craft.cpp">
-      <Filter>Файлы исходного кода\Character\Item</Filter>
     </ClCompile>
     <ClCompile Include="UI_contextMenu.cpp">
       <Filter>Файлы исходного кода\UI</Filter>
@@ -156,12 +132,6 @@
     <ClCompile Include="database_util.cpp">
       <Filter>Файлы исходного кода\Database</Filter>
     </ClCompile>
-    <ClCompile Include="refSystem.cpp">
-      <Filter>Файлы исходного кода\Util\Reference</Filter>
-    </ClCompile>
-    <ClCompile Include="itemActive.cpp">
-      <Filter>Файлы исходного кода\Character\Item</Filter>
-    </ClCompile>
     <ClCompile Include="server_world.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
     </ClCompile>
@@ -170,12 +140,6 @@
     </ClCompile>
     <ClCompile Include="client_message.cpp">
       <Filter>Файлы исходного кода\Network</Filter>
-    </ClCompile>
-    <ClCompile Include="path.cpp">
-      <Filter>Файлы исходного кода\Util\Pathing</Filter>
-    </ClCompile>
-    <ClCompile Include="api.cpp">
-      <Filter>Файлы исходного кода\Util\API</Filter>
     </ClCompile>
     <ClCompile Include="editor_main.cpp">
       <Filter>Файлы исходного кода\Editor</Filter>
@@ -210,9 +174,6 @@
     <ClCompile Include="world_save.cpp">
       <Filter>Файлы исходного кода\World</Filter>
     </ClCompile>
-    <ClCompile Include="saveload.cpp">
-      <Filter>Файлы исходного кода\Saveload</Filter>
-    </ClCompile>
     <ClCompile Include="saveload_util.cpp">
       <Filter>Файлы исходного кода\Saveload</Filter>
     </ClCompile>
@@ -225,14 +186,8 @@
     <ClCompile Include="database_external.cpp">
       <Filter>Файлы исходного кода\Database</Filter>
     </ClCompile>
-    <ClCompile Include="script.cpp">
-      <Filter>Файлы исходного кода\Script</Filter>
-    </ClCompile>
     <ClCompile Include="script_data.cpp">
       <Filter>Файлы исходного кода\Script</Filter>
-    </ClCompile>
-    <ClCompile Include="ai.cpp">
-      <Filter>Файлы исходного кода\Character\AI</Filter>
     </ClCompile>
     <ClCompile Include="ai_think.cpp">
       <Filter>Файлы исходного кода\Character\AI</Filter>
@@ -244,6 +199,54 @@
       <Filter>Файлы исходного кода\Character</Filter>
     </ClCompile>
     <ClCompile Include="game_check.cpp">
+      <Filter>Файлы исходного кода\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="audio_main.cpp">
+      <Filter>Файлы исходного кода\Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="ai_main.cpp">
+      <Filter>Файлы исходного кода\Character\AI</Filter>
+    </ClCompile>
+    <ClCompile Include="craft_main.cpp">
+      <Filter>Файлы исходного кода\Character\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="item_active.cpp">
+      <Filter>Файлы исходного кода\Character\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="item_main.cpp">
+      <Filter>Файлы исходного кода\Character\Item</Filter>
+    </ClCompile>
+    <ClCompile Include="game_main.cpp">
+      <Filter>Файлы исходного кода\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="unit_main.cpp">
+      <Filter>Файлы исходного кода\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="settings_main.cpp">
+      <Filter>Файлы исходного кода\Core</Filter>
+    </ClCompile>
+    <ClCompile Include="database_main.cpp">
+      <Filter>Файлы исходного кода\Database</Filter>
+    </ClCompile>
+    <ClCompile Include="saveload_main.cpp">
+      <Filter>Файлы исходного кода\Saveload</Filter>
+    </ClCompile>
+    <ClCompile Include="script_main.cpp">
+      <Filter>Файлы исходного кода\Script</Filter>
+    </ClCompile>
+    <ClCompile Include="refSystem_main.cpp">
+      <Filter>Файлы исходного кода\Util\Reference</Filter>
+    </ClCompile>
+    <ClCompile Include="path_main.cpp">
+      <Filter>Файлы исходного кода\Util\Pathing</Filter>
+    </ClCompile>
+    <ClCompile Include="api_main.cpp">
+      <Filter>Файлы исходного кода\Util\API</Filter>
+    </ClCompile>
+    <ClCompile Include="camera_main.cpp">
+      <Filter>Файлы исходного кода\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="animation_main.cpp">
       <Filter>Файлы исходного кода\Character</Filter>
     </ClCompile>
   </ItemGroup>
@@ -332,5 +335,21 @@
     <ClInclude Include="audio.h">
       <Filter>Файлы исходного кода\Audio</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+    <ClInclude Include="animation.h">
+      <Filter>Файлы исходного кода\Character</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\Release\icon.ico">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="resource.rc">
+      <Filter>Файлы ресурсов</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
