--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -2,6 +2,8 @@
 screenMode = 0
 screenWidth = 1600
 screenHeight = 900
+consoleWidth = 650
+consoleHeight = 350
 enableVertSync = 0
 sampleMod = 100
 
