--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -22,9 +22,18 @@ enableMouseScroll = 0
 enableDynamicTooltips = 0
 
 [Console]
-consoleFontSize = 14
+consoleFontSize = 12
 consoleLineSpacing = 2
 consoleScrollSpeed = 7
+
+[Audio]
+enableCameraListener = 1
+volumeMaster = 100
+volumeMusic = 100
+volumeEffects = 100
+volumeAmbient = 100
+volumeWeather = 100
+volumeFootsteps = 100
 
 [Keyboard]
 hkInventory = 4
