--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="audio_util.cpp">
       <Filter>Файлы исходного кода\Audio</Filter>
     </ClCompile>
+    <ClCompile Include="visual_gen.cpp">
+      <Filter>Файлы исходного кода\Visual</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
