--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -22,6 +22,7 @@ enableMouseScroll = 0
 enableDynamicTooltips = 0
 
 [Console]
+enableConsoleTimestamps = 0
 consoleFontSize = 12
 consoleLineSpacing = 2
 consoleScrollSpeed = 7
@@ -50,6 +51,7 @@ hkCamMoveUp = 22
 hkCamMoveDown = 18
 hkCamMoveLeft = 0
 hkCamMoveRight = 3
+hkCamToHero = 57
 hkDebugMode = 87
 hkDebugAdvanced = 88
 hkConsole = 54
