Working with items #8
- [Added] Multi-color unit highlight support
- [Added] Some items
- [Added] Basic tech tree
- [Fixed] Broken axes
- [Fixed] Craft inventory resource counter
- [Fixed] Item sorting

--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj
@@ -119,8 +119,10 @@
     <ClCompile Include="console_cmd.cpp" />
     <ClCompile Include="console_util.cpp" />
     <ClCompile Include="craft_main.cpp" />
+    <ClCompile Include="database_load_item.cpp" />
     <ClCompile Include="database_main.cpp" />
     <ClCompile Include="database_external.cpp" />
+    <ClCompile Include="database_load_unit.cpp" />
     <ClCompile Include="database_util.cpp" />
     <ClCompile Include="editor_file.cpp" />
     <ClCompile Include="editor_gen.cpp" />
