--- a/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
+++ b/Taiga 4 Engine/Taiga 4 Engine.vcxproj.filters
@@ -270,6 +270,12 @@
     <ClCompile Include="database_load_unit.cpp">
       <Filter>Файлы исходного кода\Database</Filter>
     </ClCompile>
+    <ClCompile Include="unit_order.cpp">
+      <Filter>Файлы исходного кода\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="target_main.cpp">
+      <Filter>Файлы исходного кода\Util\Targeting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="console.h">
