Working with items #9
- [Added] Targeting system

--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -18,6 +18,7 @@ shadowBlur = 1
 visualUnitHoverColorCode = 0
 
 [Gameplay]
+enableLazyCast = 1
 enableQuickCast = 0
 enableMouseScroll = 0
 enableDynamicTooltips = 0
