--- a/Release/settings.ini
+++ b/Release/settings.ini
@@ -6,6 +6,7 @@ consoleWidth = 650
 consoleHeight = 350
 enableVertSync = 0
 sampleMod = 100
+framerateLimit = 0
 
 [Visual]
 enableScreenShaders = 1
@@ -15,12 +16,12 @@ enableTextureSmoothing = 0
 enableCameraBlur = 0
 pixelization = 5000
 shadowBlur = 1
-visualUnitHoverColorCode = 0
+visualUnitHoverColorCode = 1
 
 [Gameplay]
 enableLazyCast = 1
 enableQuickCast = 0
-enableMouseScroll = 0
+enableMouseScroll = 1
 enableDynamicTooltips = 0
 
 [Console]
